syntax = "proto3";

import "src/proto/uuid.proto";

package observation_tools.proto;

option java_multiple_files = true;
option java_package = "tools.observation.proto";

message StaticSourceDataManifest {
  repeated StaticSourceDataManifestEntry entries = 1;
}

// A static source data is an artifact who's data is known at compile time, e.g. a 3d model. Static Source Data can be uploaded beforehand to improve performance.
message StaticSourceDataManifestEntry {
  string id = 3;

  StaticSourceDataSourceReference source = 1;

  // List of all versions of this source data.
  repeated StaticSourceDataVersionEntry versions = 2;
}

message StaticSourceDataManifestEntryId {
  Uuid uuid = 1;
}

// Defines how to find the source data for the static source data, e.g. the name of the file.
message StaticSourceDataSourceReference {
  string file_name = 1;
}

// Defines a mapping between a specific version of an source data and the artifact id we uploaded it as.
message StaticSourceDataVersionEntry {
  // SourceData id for this specific version.
  string source_data_id = 1;

  // Hash of the source data.
  string hash = 2;
}


